MOC-27: [FE] Add prefix for classes of TailwindCss.

--- a/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.html
+++ b/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.html
@@ -1,19 +1,19 @@
-<div id='main' class='w-screen h-screen center-box'>
-  <div class='bg-white rounded drop-shadow-2xl text-sm text-center p-10'>
-    <img src='assets/png/logo.png' alt='logo' class='w-44 mx-auto'/>
-    <p class='font-bold mt-5 text-primary-solid'>{{ 'component.forget_password.title' | translate }}</p>
-    <p class='text-left mt-4'>{{ 'component.forget_password.instruction' | translate }}</p>
-    <moc-field [control]='username'
+<div class='tw-w-screen tw-h-screen center-box tw-bg-center tw-bg-contain tw-bg-no-repeat' id='main'>
+  <div class='tw-w-100 tw-bg-white tw-rounded tw-drop-shadow-2xl tw-text-sm tw-text-center tw-p-10'>
+    <img alt='logo' class='tw-w-44 tw-mx-auto' src='assets/png/logo.png'/>
+    <p class='tw-font-bold tw-mt-5 text-primary-solid'>{{ 'component.forget_password.title' | translate }}</p>
+    <p class='tw-text-left tw-mt-4'>{{ 'component.forget_password.instruction' | translate }}</p>
+    <moc-input [control]='username'
                [placeholder]='"component.forget_password.email_address_placeholder" | translate'
-               class='mt-2'
-               selfClass='{{ isNotExistedUsername ? "invalid" : "" }} mt-2'
-               type='email'></moc-field>
-    <p class='mt-2 text-red'
-       *ngIf='isNotExistedUsername'>{{ 'component.forget_password.username_not_exist' | translate }}</p>
-    <moc-button label='component.forget_password.send_verification_code' (click)='submit()'></moc-button>
-    <hr class='mt-8'/>
-    <p class='mt-4 text-blue'>
-      <a routerLink='/auth/sign-in'
-         class='hover:underline'>{{ 'component.forget_password.return_sign_in' | translate }}</a></p>
+               class='tw-mt-2'
+               selfClass='{{ isNotExistedUsername ? "invalid" : "" }} tw-mt-2'
+               type='email'></moc-input>
+    <p *ngIf='isNotExistedUsername'
+       class='tw-mt-2 tw-text-red'>{{ 'component.forget_password.username_not_exist' | translate }}</p>
+    <moc-button (click)='submit()' label='component.forget_password.send_verification_code'></moc-button>
+    <hr class='tw-mt-8'/>
+    <p class='tw-mt-4 tw-text-blue'>
+      <a class='hover:tw-underline'
+         routerLink='/auth/sign-in'>{{ 'component.forget_password.return_sign_in' | translate }}</a></p>
   </div>
 </div>
