--- a/mocker-front/src/app/component/auth/component/sign-in/sign-in.component.html
+++ b/mocker-front/src/app/component/auth/component/sign-in/sign-in.component.html
@@ -1,29 +1,30 @@
-<div id='main' class='w-screen h-screen center-box'>
-  <div class='bg-white rounded drop-shadow-2xl text-sm text-center p-10' [formGroup]='formGroup'>
-    <img src='assets/png/logo.png' alt='logo' class='w-44 mx-auto'/>
-    <p class='font-bold mt-5 text-primary-solid'>{{ 'component.sign_in.title' | translate }}</p>
-    <moc-field [control]='formGroup.controls.username'
+<div class='tw-w-screen tw-h-screen center-box tw-bg-center tw-bg-contain tw-bg-no-repeat' id='main'>
+  <div [formGroup]='formGroup'
+       class='tw-w-100 tw-bg-white tw-rounded tw-drop-shadow-2xl tw-text-sm tw-text-center tw-p-10'>
+    <img alt='logo' class='tw-w-44 tw-mx-auto' src='assets/png/logo.png'/>
+    <p class='tw-font-bold tw-mt-5 text-primary-solid'>{{ 'component.sign_in.title' | translate }}</p>
+    <moc-input [control]='formGroup.controls.username'
                [placeholder]='"component.sign_in.username_placeholder" | translate'
-               selfClass='mt-2'
-               type='email'></moc-field>
-    <moc-field [control]='formGroup.controls.password'
+               selfClass='tw-mt-2'
+               type='email'></moc-input>
+    <moc-input [control]='formGroup.controls.password'
                [placeholder]='"component.sign_in.password_placeholder" | translate'
-               selfClass='mt-2'
-               type='password'></moc-field>
-    <p class='mt-4 text-red' *ngIf='invalidAuth'>{{ 'component.sign_in.invalid_auth' | translate }}</p>
+               selfClass='tw-mt-2'
+               type='password'></moc-input>
+    <p *ngIf='invalidAuth' class='tw-mt-4 tw-text-red'>{{ 'component.sign_in.invalid_auth' | translate }}</p>
     <moc-button (click)='submit()' label='component.sign_in.continue'></moc-button>
-    <p class='mt-4 text-gray-400'>{{ 'component.sign_in.or' | translate }}</p>
-    <button *ngFor='let signInMethod of signInMethods'
-            (click)='signInWithMethod(signInMethod)'
-            class='border font-medium mt-4 p-2.5 rounded w-full shadow relative hover:shadow-xl'>
-      <img src='assets/png/auth/{{ signInMethod.icon }}.png' [alt]='signInMethod.icon' class='icon absolute'/>
+    <p class='tw-mt-4 tw-text-gray'>{{ 'component.sign_in.or' | translate }}</p>
+    <button (click)='signInWithMethod(signInMethod)'
+            *ngFor='let signInMethod of signInMethods'
+            class='tw-border tw-font-medium tw-mt-4 tw-p-2.5 tw-rounded tw-w-full tw-shadow tw-relative hover:tw-shadow-xl'>
+      <img [alt]='signInMethod.icon' class='icon tw-absolute' src='assets/png/auth/{{ signInMethod.icon }}.png'/>
       {{ 'component.sign_in.continue_with_SPACE' | translate }} {{ signInMethod.name }}
     </button>
-    <hr class='mt-8'/>
-    <p class='mt-4 text-blue'>
-      <a routerLink='/auth/forget-password'
-         class='hover:underline'>{{ 'component.sign_in.cannot_login' | translate }}</a>
+    <hr class='tw-mt-8'/>
+    <p class='tw-mt-4 tw-text-blue'>
+      <a class='hover:tw-underline'
+         routerLink='/auth/forget-password'>{{ 'component.sign_in.cannot_login' | translate }}</a>
       &nbsp;&#8226;&nbsp;
-      <a routerLink='/auth/sign-up' class='hover:underline'>{{ 'component.sign_in.sign_up' | translate }}</a></p>
+      <a class='hover:tw-underline' routerLink='/auth/sign-up'>{{ 'component.sign_in.sign_up' | translate }}</a></p>
   </div>
 </div>
