--- a/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
+++ b/mocker-front/src/app/component/auth/modal/change-password/change-password.modal.html
@@ -1,24 +1,25 @@
-<div id='main' popup [modal]='this'>
-  <div class='text-sm p-5' [formGroup]='formGroup'>
-    <p class='text-center font-bold text-gray-600'>{{ 'modal.change_password.title' | translate }}</p>
-    <img class='w-32 mt-4 mx-auto' src='assets/png/auth/change_password.png' alt='change_password'/>
-    <p class='mt-4 text-gray-500' *ngIf='!isShowOldPassword'>{{ 'modal.change_password.instruction' | translate }}</p>
-    <moc-field *ngIf='isShowOldPassword'
+<div [modal]='this' id='main' popup>
+  <div [formGroup]='formGroup' class='tw-text-sm tw-w-112 ptw--5'>
+    <p class='tw-text-center tw-font-bold tw-text-gray'>{{ 'modal.change_password.title' | translate }}</p>
+    <img alt='change_password' class='tw-w-32 tw-mt-4 tw-mx-auto' src='assets/png/auth/change_password.png'/>
+    <p *ngIf='!isShowOldPassword' class='tw-mt-4 tw-text-gray'>{{ 'modal.change_password.instruction' | translate }}</p>
+    <moc-input *ngIf='isShowOldPassword'
                [control]='formGroup.controls.oldPassword'
                [placeholder]='"modal.change_password.old_password_placeholder" | translate'
                label='modal.change_password.old_password'
-               type='password'></moc-field>
-    <moc-field [control]='formGroup.controls.newPassword'
+               type='password'></moc-input>
+    <moc-input [control]='formGroup.controls.newPassword'
                [placeholder]='"modal.change_password.new_password_placeholder" | translate'
                label='modal.change_password.new_password'
-               type='password'></moc-field>
-    <moc-field [selfClass]='isPasswordNotMatch ? "invalid" : ""'
-               [control]='formGroup.controls.confirmPassword'
+               type='password'></moc-input>
+    <moc-input [control]='formGroup.controls.confirmPassword'
                [placeholder]='"modal.change_password.confirm_password_placeholder" | translate'
+               [selfClass]='isPasswordNotMatch ? "invalid" : ""'
                label='modal.change_password.confirm_password'
-               type='password'></moc-field>
+               type='password'></moc-input>
     <p *ngIf='isPasswordNotMatch'
-       class='text-red text-center mt-2'>{{ 'modal.change_password.password_not_match' | translate }}</p>
-    <moc-button (click)='submit()' class='mt-5' selfClass='btn-primary' label='modal.change_password.change_password'></moc-button>
+       class='tw-text-red tw-text-center tw-mt-2'>{{ 'modal.change_password.password_not_match' | translate }}</p>
+    <moc-button (click)='submit()' class='tw-mt-5' label='modal.change_password.change_password'
+                selfClass='btn-primary'></moc-button>
   </div>
 </div>
