--- a/mocker-front/src/app/shared/component/copyright/copyright.component.html
+++ b/mocker-front/src/app/shared/component/copyright/copyright.component.html
@@ -1,7 +1,7 @@
-<div id='main' [class]='class + " text-center mb-3 text-sm"'>
+<div id='main' [class]='class + " tw-text-center tw-mb-3 tw-text-sm"'>
   <i class='fa-regular fa-copyright'></i>
-  <span class='font-medium'> 2023 Mocker, LLC.
-    | <a href='#' class='hover-underline-text-blue text-blue'>Terms of Use</a>
-    | <a href='#' class='hover-underline-text-blue text-blue'>EULA</a>
-    | <a href='#' class='hover-underline-text-blue text-blue'>Privacy</a></span>
+  <span class='tw-font-medium'> 2023 Mocker, LLC.
+    | <a href='#' class='hover:tw-underline hover:tw-text-blue tw-text-blue'>Terms of Use</a>
+    | <a href='#' class='hover:tw-underline hover:tw-text-blue tw-text-blue'>EULA</a>
+    | <a href='#' class='hover:tw-underline hover:tw-text-blue tw-text-blue'>Privacy</a></span>
 </div>
