--- a/mocker-front/src/app/shared/component/description/description.component.html
+++ b/mocker-front/src/app/shared/component/description/description.component.html
@@ -1,1 +1,1 @@
-<p class='{{ class }} px-2 py-3 border rounded'>{{ description }}</p>
+<p class='{{ class }} tw-px-2 tw-py-3 tw-border tw-rounded'>{{ description }}</p>
