--- a/mocker-front/src/app/shared/component/loading/loading.component.html
+++ b/mocker-front/src/app/shared/component/loading/loading.component.html
@@ -1,5 +1,5 @@
 <div id='main'>
-  <div class='lds-roller p-0 bg-transparent'>
+  <div class='lds-roller tw-p-0 tw-bg-transparent'>
     <div></div>
     <div></div>
     <div></div>
