--- a/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.scss
+++ b/mocker-front/src/app/component/auth/component/forget-password/forget-password.component.scss
@@ -1,11 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 #main {
-  background: center / contain no-repeat url('/assets/png/auth/background.png');
-
-  > div {
-    width: 400px;
-  }
+  background: url(/assets/png/auth/background.png);
 }
