--- a/mocker-front/src/app/component/auth/modal/verification/verification.modal.html
+++ b/mocker-front/src/app/component/auth/modal/verification/verification.modal.html
@@ -1,19 +1,18 @@
-<div id='main' popup [modal]='this' [dialog]='true'>
-  <div class='text-sm'>
-    <p class='text-center text-gray-600 font-bold mt-4'>{{ 'modal.verification.check_email' | translate }}</p>
-    <img class='w-32 mt-4 mx-auto' src='assets/png/auth/email.svg' alt='email'/>
-    <p class='mt-4 text-gray-500'>{{ 'modal.verification.instruction' | translate }}</p>
-    <p class='mt-2 font-medium'>{{ options ? options.username : undefined }}</p>
-    <moc-field [control]='verificationCode'
+<div [dialog]='true' [modal]='this' id='main' popup>
+  <div class='tw-text-sm tw-w-125'>
+    <p class='tw-text-center tw-text-gray tw-font-bold tw-mt-4'>{{ 'modal.verification.check_email' | translate }}</p>
+    <img alt='email' class='tw-w-32 tw-mt-4 tw-mx-auto' src='assets/png/auth/email.svg'/>
+    <p class='tw-mt-4 tw-text-gray'>{{ 'modal.verification.instruction' | translate }}</p>
+    <p class='tw-mt-2 tw-font-medium'>{{ options ? options.username : undefined }}</p>
+    <moc-input [control]='verificationCode'
                [placeholder]='"modal.verification.verification_code_placeholder" | translate'
-               [selfClass]='isInvalidVerificationCode ? "invalid" : ""'
-               ></moc-field>
+               [selfClass]='isInvalidVerificationCode ? "invalid" : ""'></moc-input>
     <p *ngIf='isInvalidVerificationCode'
-       class='text-red text-center mt-2'>{{ 'modal.verification.invalid_verification_code' | translate }}</p>
-    <hr class='mt-4'/>
-    <p class=' mt-4 text-center'>
+       class='tw-text-red tw-text-center tw-mt-2'>{{ 'modal.verification.invalid_verification_code' | translate }}</p>
+    <hr class='tw-mt-4'/>
+    <p class='tw-mt-4 tw-text-center'>
       <button (click)='resendVerificationCode()'
-              class='text-blue hover:underline'>{{ 'modal.verification.resend_code' | translate }}</button>
+              class='tw-text-blue hover:tw-underline'>{{ 'modal.verification.resend_code' | translate }}</button>
     </p>
   </div>
 </div>
