--- a/mocker-front/src/app/component/schema/component/diagram/diagram.component.html
+++ b/mocker-front/src/app/component/schema/component/diagram/diagram.component.html
@@ -1,11 +1,11 @@
 <div id='main'>
-  <div class='flex flex-wrap'>
-    <moc-table (map)='map($event)' (cdkDragEnded)='dragEnded($event)'
-               (cdkDragMoved)='dragMoved($event)'
+  <div class='tw-flex tw-flex-wrap'>
+    <moc-table (cdkDragEnded)='dragEnded($event)' (cdkDragMoved)='dragMoved($event)'
                (cdkDragStarted)='dragStarted($event)'
+               (map)='map($event)'
                *ngFor='let table of tables'
                [table]='table'
                cdkDrag
-               class='mt-20'></moc-table>
+               class='tw-mt-20'></moc-table>
   </div>
 </div>
