--- a/mocker-front/src/app/component/schema/modal/table-config/table-config.modal.html
+++ b/mocker-front/src/app/component/schema/modal/table-config/table-config.modal.html
@@ -1,25 +1,27 @@
-<div id='main' popup [modal]='this' [opacity]='0.5'>
-  <div class='text-sm p-5 w-300 h-210'>
-    <p class='font-bold text-medium'>{{ 'modal.table_config.title' | translate }}</p>
-    <moc-table-detail class='mt-10' selfClass='h-150 overflow-y-auto'
-                      [table]='$any(formGroup.controls.table)'></moc-table-detail>
-    <div class='mt-5 flex'>
-      <div class='flex'>
-        <span class='mt-3'>{{ 'modal.table_config.table_name' | translate }}</span>
-        <moc-field class='ml-5' [control]='formGroup.controls.table.controls.name'
-                   placeholder='TableModel name'></moc-field>
+<div [modal]='this' [opacity]='0.5' id='main' popup>
+  <div class='tw-text-sm tw-p-5 tw-w-300 tw-h-210'>
+    <p class='tw-font-bold tw-text-medium'>{{ 'modal.table_config.title' | translate }}</p>
+    <moc-table-detail [table]='$any(formGroup.controls.table)' class='mt-10'
+                      selfClass='tw-h-150 tw-overflow-y-auto'></moc-table-detail>
+    <div class='tw-mt-5 tw-flex'>
+      <div class='tw-flex'>
+        <span class='tw-mt-3'>{{ 'modal.table_config.table_name' | translate }}</span>
+        <moc-input [control]='formGroup.controls.table.controls.name' class='tw-ml-5'
+                   placeholder='modal.table_config.table_name_placeholder'></moc-input>
       </div>
-      <div class='flex ml-5'>
-        <span class='mt-3'>{{ 'modal.table_config.rows' | translate }}</span>
-        <moc-field class=' ml-5 w-36' [control]='formGroup.controls.rows' placeholder='Rows'></moc-field>
+      <div class='tw-flex tw-ml-5'>
+        <span class='tw-mt-3'>{{ 'modal.table_config.rows' | translate }}</span>
+        <moc-input [control]='formGroup.controls.rows' class=' tw-ml-5 tw-w-36'
+                   placeholder='modal.table_config.rows_placeholder'></moc-input>
       </div>
-      <moc-button (click)='submit()' icon='fa-solid fa-floppy-disk' class='ml-5 w-40' selfClass='btn-primary text-left'
-                  label='modal.table_config.save'></moc-button>
-      <moc-button (click)='delete()' icon='fa-solid fa-trash' class='ml-5 w-56' selfClass='btn-red text-left'
-                  label='modal.table_config.delete'></moc-button>
-      <moc-button (click)='close(options.table ? options.table.id : undefined)' icon='fa-solid fa-right-from-bracket'
-                  class='ml-5 w-40'
-                  selfClass='btn-light text-left' label='modal.table_config.close'></moc-button>
+      <moc-button (click)='submit()' class='tw-ml-5 tw-w-40' icon='fa-solid fa-floppy-disk'
+                  label='modal.table_config.save'
+                  selfClass='btn-primary tw-text-left'></moc-button>
+      <moc-button (click)='delete()' class='tw-ml-5 tw-w-56' icon='fa-solid fa-trash' label='modal.table_config.delete'
+                  selfClass='btn-red tw-text-left'></moc-button>
+      <moc-button (click)='close(options.table ? options.table.id : undefined)' class='tw-ml-5 tw-w-40'
+                  icon='fa-solid fa-right-from-bracket'
+                  label='modal.table_config.close' selfClass='btn-light tw-text-left'></moc-button>
     </div>
   </div>
 </div>
