--- a/mocker-front/src/app/shared/component/table/table.component.html
+++ b/mocker-front/src/app/shared/component/table/table.component.html
@@ -1,19 +1,19 @@
-<div id='main' class='{{ class }} text-sm z-10'>
-  <div class='{{ selfClass }} border rounded w-72 overflow-hidden'>
-    <p class='bg-blue h-8 heading text-center leading-8 font-medium text-white uppercase'>
-      <i class='fa-regular fa-table mr-3'></i>
+<div class='{{ class }} tw-text-sm tw-z-10' id='main'>
+  <div class='{{ selfClass }} tw-border tw-rounded tw-w-72 tw-overflow-hidden'>
+    <p class='tw-bg-blue tw-h-8 tw-heading tw-text-center tw-leading-8 tw-font-medium tw-text-white tw-uppercase'>
+      <i class='fa-regular fa-table tw-mr-3'></i>
       {{ table.name }}
-      <i (click)='openDetail()' class='edit-icon hidden ml-3 fa-solid fa-pen-to-square cursor-pointer'></i>
+      <i (click)='openDetail()' class='edit-icon tw-hidden tw-ml-3 fa-solid fa-pen-to-square tw-cursor-pointer'></i>
     </p>
-    <div class='bg-white'>
+    <div class='tw-bg-white'>
       <div *ngFor='let field of table.fields'
-           class='px-5 py-1.5 flex justify-between hover:bg-blue-light items-center'>
-        <p class='w-1/12'>
+           class='tw-px-5 tw-py-1.5 tw-flex tw-justify-between hover:tw-bg-blue-light tw-items-center'>
+        <p class='tw-w-1/12'>
           <!--          <i class='fa-regular fa-key'></i>-->
           <!--          <i class='fa-solid fa-key text-yellow'></i>-->
         </p>
-        <p class='w-1/2 cursor-pointer hover:font-medium' (click)='map.emit(field)'>{{ field.name }}</p>
-        <p class='w-1/3 uppercase'>{{ field.sqlType.code || 'DEFAULT' }}</p>
+        <p (click)='map.emit(field)' class='tw-w-1/2 tw-cursor-pointer hover:tw-font-medium'>{{ field.name }}</p>
+        <p class='tw-w-1/3 tw-uppercase'>{{ field.sqlType.code || 'DEFAULT' }}</p>
       </div>
     </div>
   </div>
