--- a/mocker-front/src/app/shared/modal/choose-type/choose-type.modal.html
+++ b/mocker-front/src/app/shared/modal/choose-type/choose-type.modal.html
@@ -1,35 +1,35 @@
-<div id='main' popup [modal]='this'>
-  <div class='p-3 text-sm'>
-    <div class='flex justify-between items-center'>
-      <p class='font-medium'>{{ 'modal.choose_type.title' | translate }}</p>
-      <moc-field class='w-60' [placeholder]='"modal.choose_type.find_placeholder" | translate'
-                 [control]='formControl'
-                 selfClass='p-2'></moc-field>
+<div [modal]='this' id='main' popup>
+  <div class='tw-w-232 tw-h-200 tw-p-3 tw-text-sm'>
+    <div class='tw-flex tw-justify-between tw-items-center'>
+      <p class='tw-font-medium'>{{ 'modal.choose_type.title' | translate }}</p>
+      <moc-input [control]='formControl' [placeholder]='"modal.choose_type.find_placeholder" | translate'
+                 class='tw-w-60'
+                 selfClass='tw-p-2'></moc-input>
     </div>
-    <div *ngIf='options?.isGenerateType' class='flex mt-3 overflow-x-scroll'>
-      <moc-button class='mx-0.5' selfClass='py-2 {{ currentCategory ? "btn-light" : "btn-primary" }}'
-                  (click)='changeCategory()'
-                  label='All&nbsp;({{ numberOfGenerateTypes }})'></moc-button>
-      <moc-button class='mx-0.5'
-                  selfClass='py-2 {{ currentCategory?.id === category.id ? "btn-primary" : "btn-light" }}'
+    <div *ngIf='options?.isGenerateType' class='tw-flex tw-mt-3 tw-overflow-x-scroll'>
+      <moc-button (click)='changeCategory()' class='tw-mx-0.5'
+                  label='All&nbsp;({{ numberOfGenerateTypes }})'
+                  selfClass='tw-py-2 {{ currentCategory ? "btn-light" : "btn-primary" }}'></moc-button>
+      <moc-button (click)='changeCategory(category)'
                   *ngFor='let category of categories'
-                  (click)='changeCategory(category)'
-                  label='{{ category.name | truncate: 20 }}&nbsp;({{ category.generateTypes.length }})'></moc-button>
+                  class='tw-mx-0.5'
+                  label='{{ category.name | truncate: 20 }}&nbsp;({{ category.generateTypes.length }})'
+                  selfClass='tw-py-2 {{ currentCategory?.id === category.id ? "btn-primary" : "btn-light" }}'></moc-button>
     </div>
-    <div class='text-center {{ types && types.length ? "hidden" : "" }}'>
+    <div class='tw-text-center {{ types && types.length ? "tw-hidden" : "" }}'>
       <p>{{ 'modal.choose_type.not_match' | translate }}</p>
-      <p class='hover:underline text-blue cursor-pointer'
-         (click)='formControl.setValue(undefined)'>{{ 'modal.choose_type.clear_credential' | translate }}</p>
+      <p (click)='formControl.setValue(undefined)'
+         class='hover:tw-underline tw-text-blue tw-cursor-pointer'>{{ 'modal.choose_type.clear_credential' | translate }}</p>
     </div>
-    <div class='flex flex-wrap content-start h-5/6 overflow-y-scroll'>
+    <div class='tw-flex tw-flex-wrap tw-content-start tw-h-5/6 tw-overflow-y-scroll'>
       <div
-        class='m-3 p-4 cursor-pointer rounded w-1/4 {{ (options.current && type.id === options.current.id) ? "bg-gray" : "hover:bg-gray" }}'
         (click)='close(type)'
-        *ngFor='let type of types'>
-        <p class='font-medium first-letter:underline'>{{ type.code }}</p>
-        <p class='text-gray'>{{ type.description | truncate: 90 }}</p>
+        *ngFor='let type of types'
+        class='tw-m-3 p-4 tw-cursor-pointer tw-rounded tw-w-1/4 {{ (options.current && type.id === options.current.id) ? "tw-bg-gray" : "hover:tw-bg-gray" }}'>
+        <p class='tw-font-medium first-letter:tw-underline'>{{ type.code }}</p>
+        <p class='tw-text-gray'>{{ type.description | truncate: 90 }}</p>
         <ng-container *ngIf='options?.isGenerateType'>
-          <li class='text-gray' *ngFor='let source of type.sources'>{{ source.value | truncate: 20 }}</li>
+          <li class='tw-text-gray' *ngFor='let source of type.sources'>{{ source.value | truncate: 20 }}</li>
         </ng-container>
       </div>
     </div>
