--- a/mocker-front/src/app/shared/modal/preview/preview.modal.html
+++ b/mocker-front/src/app/shared/modal/preview/preview.modal.html
@@ -1,18 +1,18 @@
-<div id='main' popup [modal]='this'>
-  <div class='text-sm p-5'>
-    <p class='font-medium text-lg'>{{ 'modal.preview.title' | translate }}</p>
-    <moc-tab [tabs]='tabs' selfClass='text-center'>
+<div [modal]='this' id='main' popup>
+  <div class='tw-w-300 tw-h-200 tw-text-sm tw-p-5'>
+    <p class='tw-font-medium tw-text-lg'>{{ 'modal.preview.title' | translate }}</p>
+    <moc-tab [tabs]='tabs' selfClass='tw-text-center'>
       <ng-template #table>
-        <div class='overflow-auto h-150 mt-5'>
-          <table *ngIf='options.data.length' class='w-full'>
+        <div class='tw-overflow-auto tw-h-150 tw-mt-5'>
+          <table *ngIf='options.data.length' class='tw-w-full'>
             <thead>
-            <tr class='sticky top-0'>
-              <th class='text-left py-2 px-3 bg-white' *ngFor='let key of keys'>{{ key.toUpperCase() }}</th>
+            <tr class='tw-sticky tw-top-0'>
+              <th *ngFor='let key of keys' class='tw-text-left tw-py-2 tw-px-3 tw-bg-white'>{{ key.toUpperCase() }}</th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor='let element of options.data'>
-              <td class='py-2 px-3' *ngFor='let key of keys'>{{ element[key] }}</td>
+              <td *ngFor='let key of keys' class='tw-py-2 tw-px-3'>{{ element[key] }}</td>
             </tr>
             </tbody>
           </table>
@@ -20,22 +20,22 @@
       </ng-template>
       <ng-template #raw>
         <ng-container [ngSwitch]='options.format'>
-          <pre class='h-150 mt-5 overflow-scroll'
-               *ngSwitchCase='"JSON"'>{{ options.data | mocJson: options.tableName! }}</pre>
-          <pre class='h-150 mt-5 overflow-scroll'
-               *ngSwitchCase='"SQL"'>{{ options.data | sql: options.tableName! }}</pre>
-          <pre class='h-150 mt-5 overflow-scroll'
-               *ngSwitchCase='"XML"'>{{ options.data | xml: options.tableName! }}</pre>
-          <pre class='h-150 mt-5 overflow-scroll' *ngSwitchCase='"CSV"'>{{ options.data | csv }}</pre>
+          <pre *ngSwitchCase='"JSON"'
+               class='tw-h-150 tw-mt-5 tw-overflow-scroll'>{{ options.data | mocJson: options.tableName! }}</pre>
+          <pre *ngSwitchCase='"SQL"'
+               class='tw-h-150 tw-mt-5 tw-overflow-scroll'>{{ options.data | sql: options.tableName! }}</pre>
+          <pre *ngSwitchCase='"XML"'
+               class='tw-h-150 tw-mt-5 tw-overflow-scroll'>{{ options.data | xml: options.tableName! }}</pre>
+          <pre *ngSwitchCase='"CSV"' class='tw-h-150 tw-mt-5 tw-overflow-scroll'>{{ options.data | csv }}</pre>
         </ng-container>
       </ng-template>
     </moc-tab>
-    <div class='flex justify-between mt-5'>
+    <div class='tw-flex tw-justify-between tw-mt-5'>
       <p>{{ 'modal.preview.show_first_100_rows' | translate }}</p>
-      <div class='flex pr-5'>
-        <moc-button (click)='options.download()' selfClass='px-5 btn-primary'
-                    label='modal.preview.download_data'></moc-button>
-        <moc-button (click)='close()' selfClass='ml-5 px-5 btn-light' label='modal.preview.close'></moc-button>
+      <div class='tw-flex tw-pr-5'>
+        <moc-button (click)='options.download()' label='modal.preview.download_data'
+                    selfClass='tw-px-5 btn-primary'></moc-button>
+        <moc-button (click)='close()' label='modal.preview.close' selfClass='tw-ml-5 tw-px-5 btn-light'></moc-button>
       </div>
     </div>
   </div>
