--- a/mocker-front/src/app/shared/modal/preview/preview.modal.scss
+++ b/mocker-front/src/app/shared/modal/preview/preview.modal.scss
@@ -1,14 +1,5 @@
 #main {
-  > div {
-    width: 1200px;
-    height: 800px;
-  }
-
-  .h-150 {
-    height: 600px;
-  }
-
   table tr:nth-child(odd) > td {
-    @apply bg-gray;
+    @apply tw-bg-gray;
   }
 }
