--- a/mocker-front/src/styles.scss
+++ b/mocker-front/src/styles.scss
@@ -1,24 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500&display=swap');
-@import 'variable-size';
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 * {
-  @apply mr-0 p-0 box-border;
+  @apply tw-mr-0 tw-p-0 tw-box-border;
 }
 
 ::-webkit-scrollbar {
-  @apply w-3 h-3;
+  @apply tw-w-3 tw-h-3;
 }
 
 ::-webkit-scrollbar-track {
-  @apply rounded-lg bg-white;
+  @apply tw-rounded-lg tw-bg-white;
 }
 
 ::-webkit-scrollbar-thumb {
-  @apply bg-slate-400 rounded-3xl;
+  @apply tw-bg-slate-400 tw-rounded-3xl;
   border: 3px solid #FFF;
 }
 
@@ -30,36 +29,24 @@ input:-webkit-autofill:active {
 }
 
 body {
-  @apply min-w-300;
+  @apply tw-min-w-300;
   font-family: 'Roboto', sans-serif;
 
   input, label, textarea {
     font-family: 'Roboto', sans-serif;
-    @apply outline-0;
-  }
-
-  .viewport-width-standard {
-    width: $viewport-width-standard;
+    @apply tw-outline-0;
   }
 
   .icon {
     width: 22px;
   }
 
-  .shadow-light {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.09);
-  }
-
-  .hover-underline-text-blue:hover {
-    @apply text-blue underline;
-  }
-
   .center-box {
-    @apply relative;
+    @apply tw-relative;
 
     > *:first-child {
       content: '';
-      @apply rounded absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
+      @apply tw-rounded tw-absolute tw-top-1/2 tw-left-1/2 -tw-translate-x-1/2 -tw-translate-y-1/2;
     }
   }
 
